﻿[B]1.0.10[/B]
- encrypted linkek támogatása
- nexus támogatás

[B]1.0.9[/B]
- modules __init__.py pótolva

[B]1.0.8[/B]
- Profile path dekódolás

[B]1.0.7[/B]
- Keresési előzmények javítása

[B]1.0.6[/B]
- Matrix kompatibilitás

[B]1.0.5[/B]
- Forrás link vissza

[B]1.0.4[/B]
- Forrás link módosítása

[B]1.0.3[/B]
- Forrás változás követése
- Keresések mentése

[B]1.0.2[/B]
- Gyorsitas

[B]1.0.1[/B]
- Kategória szűrés a beállitásokban

[B]1.0.0[/B]
- Első verzió