@@ -1,4 +1,9 @@
-﻿[B]1.0.10[/B]
+﻿[B]1.0.11[/B]
+- főmenü átalakítása
+- megjelenés éve szerinti bontás
+- sorozatok javítása
+
+[B]1.0.10[/B]
 - encrypted linkek támogatása
 - nexus támogatás
 
